[project]
name = "bt-trace"
version = "0.1.0"
description = ""
authors = [
    {name = "oxtensor",email = "me@oxtensor.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "bittensor (>=10.2.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 250
target-version = "py312"
[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)"
]
